--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
 <body>
 <p>To do.</p>
+
+<p><a href="http://validator.w3.org/check?uri=referer">
+<img src="http://www.w3.org/Icons/valid-html40" alt="Valid HTML 4.01 Strict"></a></p>
 </body>
 
 </html>
