--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 </head>
 
 <body>
-<p>To do.</p>
+<table>
+<tr><td id="a8">.</td><td id="b8">.</td><td id="c8">.</td><td id="d8">.</td><td id="e8">.</td><td id="f8">.</td><td id="g8">.</td><td id="h8">.</td></tr>
+<tr><td id="a7">.</td><td id="b7">.</td><td id="c7">.</td><td id="d7">.</td><td id="e7">.</td><td id="f7">.</td><td id="g7">.</td><td id="h7">.</td></tr>
+<tr><td id="a6">.</td><td id="b6">.</td><td id="c6">.</td><td id="d6">.</td><td id="e6">.</td><td id="f6">.</td><td id="g6">.</td><td id="h6">.</td></tr>
+<tr><td id="a5">.</td><td id="b5">.</td><td id="c5">.</td><td id="d5">.</td><td id="e5">.</td><td id="f5">.</td><td id="g5">.</td><td id="h5">.</td></tr>
+<tr><td id="a4">.</td><td id="b4">.</td><td id="c4">.</td><td id="d4">.</td><td id="e4">.</td><td id="f4">.</td><td id="g4">.</td><td id="h4">.</td></tr>
+<tr><td id="a3">.</td><td id="b3">.</td><td id="c3">.</td><td id="d3">.</td><td id="e3">.</td><td id="f3">.</td><td id="g3">.</td><td id="h3">.</td></tr>
+<tr><td id="a2">.</td><td id="b2">.</td><td id="c2">.</td><td id="d2">.</td><td id="e2">.</td><td id="f2">.</td><td id="g2">.</td><td id="h2">.</td></tr>
+<tr><td id="a1">.</td><td id="b1">.</td><td id="c1">.</td><td id="d1">.</td><td id="e1">.</td><td id="f1">.</td><td id="g1">.</td><td id="h1">.</td></tr>
+</table>
 
 <p><a href="http://validator.w3.org/check?uri=referer">
 <img src="http://www.w3.org/Icons/valid-html40" alt="Valid HTML 4.01 Strict"></a></p>
