basic Forsyth renderer page (requires JS)

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <head>
 <title>Chess Forsyth Calculator</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<script type="text/javascript" src="Forsyth.js"></script>
 </head>
 
-<body>
+<body onload="JS_main(document)">
+<noscript>
+Your browser is not accepting client-side scripts.  Lacking our own personal web server, there is no fallback.
+</noscript>
+
 <table>
 <tr><td id="a8">.</td><td id="b8">.</td><td id="c8">.</td><td id="d8">.</td><td id="e8">.</td><td id="f8">.</td><td id="g8">.</td><td id="h8">.</td></tr>
 <tr><td id="a7">.</td><td id="b7">.</td><td id="c7">.</td><td id="d7">.</td><td id="e7">.</td><td id="f7">.</td><td id="g7">.</td><td id="h7">.</td></tr>
