--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body onload="JS_main(document)">
-<noscript>
+<noscript><p>
 Your browser is not accepting client-side scripts.  Lacking our own personal web server, there is no fallback.
-</noscript>
+</p></noscript>
 
 <table>
 <tr><td id="a8">.</td><td id="b8">.</td><td id="c8">.</td><td id="d8">.</td><td id="e8">.</td><td id="f8">.</td><td id="g8">.</td><td id="h8">.</td></tr>
