--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
 <title>Chess Forsyth Calculator</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<link rel="stylesheet" href="board.css" type="text/css">
 <script type="text/javascript" src="Forsyth.js"></script>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 
 <body onload="JS_main(document)">
@@ -13,14 +14,14 @@ Your browser is not accepting client-side scripts.  Lacking our own personal web
 </p></noscript>
 
 <table>
-<tr><td id="a8">.</td><td id="b8">.</td><td id="c8">.</td><td id="d8">.</td><td id="e8">.</td><td id="f8">.</td><td id="g8">.</td><td id="h8">.</td></tr>
-<tr><td id="a7">.</td><td id="b7">.</td><td id="c7">.</td><td id="d7">.</td><td id="e7">.</td><td id="f7">.</td><td id="g7">.</td><td id="h7">.</td></tr>
-<tr><td id="a6">.</td><td id="b6">.</td><td id="c6">.</td><td id="d6">.</td><td id="e6">.</td><td id="f6">.</td><td id="g6">.</td><td id="h6">.</td></tr>
-<tr><td id="a5">.</td><td id="b5">.</td><td id="c5">.</td><td id="d5">.</td><td id="e5">.</td><td id="f5">.</td><td id="g5">.</td><td id="h5">.</td></tr>
-<tr><td id="a4">.</td><td id="b4">.</td><td id="c4">.</td><td id="d4">.</td><td id="e4">.</td><td id="f4">.</td><td id="g4">.</td><td id="h4">.</td></tr>
-<tr><td id="a3">.</td><td id="b3">.</td><td id="c3">.</td><td id="d3">.</td><td id="e3">.</td><td id="f3">.</td><td id="g3">.</td><td id="h3">.</td></tr>
-<tr><td id="a2">.</td><td id="b2">.</td><td id="c2">.</td><td id="d2">.</td><td id="e2">.</td><td id="f2">.</td><td id="g2">.</td><td id="h2">.</td></tr>
-<tr><td id="a1">.</td><td id="b1">.</td><td id="c1">.</td><td id="d1">.</td><td id="e1">.</td><td id="f1">.</td><td id="g1">.</td><td id="h1">.</td></tr>
+<tr><td id="a8" class="w">.</td><td id="b8" class="b">.</td><td id="c8" class="w">.</td><td id="d8" class="b">.</td><td id="e8" class="w">.</td><td id="f8" class="b">.</td><td id="g8" class="w">.</td><td id="h8" class="b">.</td></tr>
+<tr><td id="a7" class="b">.</td><td id="b7" class="w">.</td><td id="c7" class="b">.</td><td id="d7" class="w">.</td><td id="e7" class="b">.</td><td id="f7" class="w">.</td><td id="g7" class="b">.</td><td id="h7" class="w">.</td></tr>
+<tr><td id="a6" class="w">.</td><td id="b6" class="b">.</td><td id="c6" class="w">.</td><td id="d6" class="b">.</td><td id="e6" class="w">.</td><td id="f6" class="b">.</td><td id="g6" class="w">.</td><td id="h6" class="b">.</td></tr>
+<tr><td id="a5" class="b">.</td><td id="b5" class="w">.</td><td id="c5" class="b">.</td><td id="d5" class="w">.</td><td id="e5" class="b">.</td><td id="f5" class="w">.</td><td id="g5" class="b">.</td><td id="h5" class="w">.</td></tr>
+<tr><td id="a4" class="w">.</td><td id="b4" class="b">.</td><td id="c4" class="w">.</td><td id="d4" class="b">.</td><td id="e4" class="w">.</td><td id="f4" class="b">.</td><td id="g4" class="w">.</td><td id="h4" class="b">.</td></tr>
+<tr><td id="a3" class="b">.</td><td id="b3" class="w">.</td><td id="c3" class="b">.</td><td id="d3" class="w">.</td><td id="e3" class="b">.</td><td id="f3" class="w">.</td><td id="g3" class="b">.</td><td id="h3" class="w">.</td></tr>
+<tr><td id="a2" class="w">.</td><td id="b2" class="b">.</td><td id="c2" class="w">.</td><td id="d2" class="b">.</td><td id="e2" class="w">.</td><td id="f2" class="b">.</td><td id="g2" class="w">.</td><td id="h2" class="b">.</td></tr>
+<tr><td id="a1" class="b">.</td><td id="b1" class="w">.</td><td id="c1" class="b">.</td><td id="d1" class="w">.</td><td id="e1" class="b">.</td><td id="f1" class="w">.</td><td id="g1" class="b">.</td><td id="h1" class="w">.</td></tr>
 </table>
 
 <p><a href="http://validator.w3.org/check?uri=referer">
