--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
 Your browser is not accepting client-side scripts.  Lacking our own personal web server, there is no fallback.
 </p></noscript>
 
-<table>
-<tr><td id="a8" class="w"></td><td id="b8" class="b"></td><td id="c8" class="w"></td><td id="d8" class="b"></td><td id="e8" class="w"></td><td id="f8" class="b"></td><td id="g8" class="w"></td><td id="h8" class="b"></td></tr>
-<tr><td id="a7" class="b"></td><td id="b7" class="w"></td><td id="c7" class="b"></td><td id="d7" class="w"></td><td id="e7" class="b"></td><td id="f7" class="w"></td><td id="g7" class="b"></td><td id="h7" class="w"></td></tr>
-<tr><td id="a6" class="w"></td><td id="b6" class="b"></td><td id="c6" class="w"></td><td id="d6" class="b"></td><td id="e6" class="w"></td><td id="f6" class="b"></td><td id="g6" class="w"></td><td id="h6" class="b"></td></tr>
-<tr><td id="a5" class="b"></td><td id="b5" class="w"></td><td id="c5" class="b"></td><td id="d5" class="w"></td><td id="e5" class="b"></td><td id="f5" class="w"></td><td id="g5" class="b"></td><td id="h5" class="w"></td></tr>
-<tr><td id="a4" class="w"></td><td id="b4" class="b"></td><td id="c4" class="w"></td><td id="d4" class="b"></td><td id="e4" class="w"></td><td id="f4" class="b"></td><td id="g4" class="w"></td><td id="h4" class="b"></td></tr>
-<tr><td id="a3" class="b"></td><td id="b3" class="w"></td><td id="c3" class="b"></td><td id="d3" class="w"></td><td id="e3" class="b"></td><td id="f3" class="w"></td><td id="g3" class="b"></td><td id="h3" class="w"></td></tr>
-<tr><td id="a2" class="w"></td><td id="b2" class="b"></td><td id="c2" class="w"></td><td id="d2" class="b"></td><td id="e2" class="w"></td><td id="f2" class="b"></td><td id="g2" class="w"></td><td id="h2" class="b"></td></tr>
-<tr><td id="a1" class="b"></td><td id="b1" class="w"></td><td id="c1" class="b"></td><td id="d1" class="w"></td><td id="e1" class="b"></td><td id="f1" class="w"></td><td id="g1" class="b"></td><td id="h1" class="w"></td></tr>
-</table>
+<span id="a8" class="w"></span><span id="b8" class="b"></span><span id="c8" class="w"></span><span id="d8" class="b"></span><span id="e8" class="w"></span><span id="f8" class="b"></span><span id="g8" class="w"></span><span id="h8" class="b"></span><br>
+<span id="a7" class="b"></span><span id="b7" class="w"></span><span id="c7" class="b"></span><span id="d7" class="w"></span><span id="e7" class="b"></span><span id="f7" class="w"></span><span id="g7" class="b"></span><span id="h7" class="w"></span><br>
+<span id="a6" class="w"></span><span id="b6" class="b"></span><span id="c6" class="w"></span><span id="d6" class="b"></span><span id="e6" class="w"></span><span id="f6" class="b"></span><span id="g6" class="w"></span><span id="h6" class="b"></span><br>
+<span id="a5" class="b"></span><span id="b5" class="w"></span><span id="c5" class="b"></span><span id="d5" class="w"></span><span id="e5" class="b"></span><span id="f5" class="w"></span><span id="g5" class="b"></span><span id="h5" class="w"></span><br>
+<span id="a4" class="w"></span><span id="b4" class="b"></span><span id="c4" class="w"></span><span id="d4" class="b"></span><span id="e4" class="w"></span><span id="f4" class="b"></span><span id="g4" class="w"></span><span id="h4" class="b"></span><br>
+<span id="a3" class="b"></span><span id="b3" class="w"></span><span id="c3" class="b"></span><span id="d3" class="w"></span><span id="e3" class="b"></span><span id="f3" class="w"></span><span id="g3" class="b"></span><span id="h3" class="w"></span><br>
+<span id="a2" class="w"></span><span id="b2" class="b"></span><span id="c2" class="w"></span><span id="d2" class="b"></span><span id="e2" class="w"></span><span id="f2" class="b"></span><span id="g2" class="w"></span><span id="h2" class="b"></span><br>
+<span id="a1" class="b"></span><span id="b1" class="w"></span><span id="c1" class="b"></span><span id="d1" class="w"></span><span id="e1" class="b"></span><span id="f1" class="w"></span><span id="g1" class="b"></span><span id="h1" class="w"></span><br>
 
 <p><a href="http://validator.w3.org/check?uri=referer">
 <img src="http://www.w3.org/Icons/valid-html40" alt="Valid HTML 4.01 Strict"></a></p>
