removed extra cell

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Your browser is not accepting client-side scripts.  Lacking our own personal web
 </table>
 <p></p>
 <table>
-<tr><td>&nbsp;</td><td class="n">a</td><td class="n">b</td><td class="n">c</td><td class="n"><td class="n">d</td><td class="n">e</td><td class="n">f</td><td class="n">g</td><td class="n">h</td></tr>
+<tr><td>&nbsp;</td><td class="n">a</td><td class="n">b</td><td class="n">c</td><td class="n">d</td><td class="n">e</td><td class="n">f</td><td class="n">g</td><td class="n">h</td></tr>
 </table>
 
 <hr>
