--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@ Your browser is not accepting client-side scripts.  Lacking our own personal web
 </table>
 
 <hr>
+
+<p><a href="jchess.html">Play against the computer (requires Java).</a></p>
+
 <p><a href="http://validator.w3.org/check?uri=referer">
 <img src="http://www.w3.org/Icons/valid-html40" alt="Valid HTML 4.01 Strict"></a></p>
 </body>
