Install example usage of applet scriptability.

--- a/jchess.html
+++ b/jchess.html
@@ -27,6 +27,8 @@
 	<param name="Level" value="1,9999,7">
 	<param name="HideButtons" value="1">
 	<param name="flip" value="0">
+	<param name="OnDoMove" value="jchess_new_move">
+	<param name="OnNewGame" value="jchess_new_game">
 </applet>
 </div>
 
