Please, no more page encoding warnings in the error console.

--- a/jchess.html
+++ b/jchess.html
@@ -4,6 +4,7 @@
 <title>Little ChessPartner 1.12</title>
 <link rel="stylesheet" href="board.css" type="text/css">
 <script src="Forsyth.js" type="text/javascript"></script>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 
 <body onload="JVM_main(document, jchess)">
