added several types of practice puzzles and problems

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@ Your browser is not accepting client-side scripts.  Lacking our own personal web
 
 <hr>
 
-<p><a href="jchess.html">Play against the computer (requires Java).</a></p>
+<p><a href="jchess.html">Play against the computer (currently requires Java).</a></p>
+<p><a href="practice.html">Practice with chess problems and puzzles (requires Java).</a></p>
 
 <p><a href="http://validator.w3.org/check?uri=referer">
 <img src="http://www.w3.org/Icons/valid-html40" alt="Valid HTML 4.01 Strict"></a></p>
