rearranged width parameter to go before height

--- a/jchess.html
+++ b/jchess.html
@@ -9,7 +9,7 @@
 
 <body>
 <div>
-<applet code="jchess.class" height="400" name="jchess" width="400" MAYSCRIPT>
+<applet code="jchess.class" width="400" height="400" name="jchess" MAYSCRIPT>
 	<param name="MAYSCRIPT" value="true">
 	<param name="code" value="jchess.class">
         <param name="codebase" value="http://cxd4.github.io/chess/engine/">
