--- a/jchess.html
+++ b/jchess.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
+
 <head>
 <title>Little ChessPartner 1.12</title>
 <link rel="stylesheet" href="board.css" type="text/css">
@@ -44,7 +45,7 @@ schedule = window.setInterval(timer_hack, 10);
 
 <hr>
 <p><a href="http://validator.w3.org/check?uri=referer">
-<img alt="Valid HTML 4.01 Strict" src="http://www.w3.org/Icons/valid-html401">
+<img alt="Valid HTML 3.2" src="http://www.w3.org/Icons/valid-html32">
 </a></p>
 
 </body>
