fixed all HTML3 conformance errors

--- a/jchess.html
+++ b/jchess.html
@@ -3,7 +3,8 @@
 
 <head>
 <title>Little ChessPartner 1.12</title>
-<link rel="stylesheet" href="board.css" type="text/css">
+<link rel="stylesheet" href="board.css">
+<link rel="script" href="Forsyth.js">
 <script src="Forsyth.js" type="text/javascript"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
@@ -33,7 +34,7 @@
 	<param name="OnNewGame" value="jchess_new_game">
 </applet>
 </div>
-<script type="text/javascript">
+<script language="JavaScript">
 function timer_hack() {
     "use strict";
 
