hmm, thought that was a tab :)

--- a/jchess.html
+++ b/jchess.html
@@ -14,7 +14,7 @@
 <applet code="jchess.class" width="400" height="400" name="jchess">
 	<param name="MAYSCRIPT" value="true">
 	<param name="code" value="jchess.class">
-        <param name="codebase" value="http://cxd4.github.io/chess/engine/">
+	<param name="codebase" value="engine/">
 	<param name="fen" value="rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1">
 	<param name="bgcolor" value="#000000">
 	<param name="color" value="#FF0000">
