Remove the requirement to override free whitespace under <A>.

--- a/practice.html
+++ b/practice.html
@@ -13,66 +13,42 @@
 
 <p>White to play and checkmate:</p>
 <ul>
-    <li><a href="jchess.html?f=kbK5/pp6/1P6/8/8/8/R7/8">
-        Paul Morphy, 1840s</a>:  White mates in 2 moves.</li>
-    <li><a href="jchess.html?f=5B2/6P1/1p6/8/1N6/kP6/2K5/8">
-        Eduard Petsch-Manskopf, 1899</a>:  White mates in 3 moves.</li>
-    <li><a href="jchess.html?f=8/8/6p1/7p/7P/8/pk1K4/2R5">
-        Giulio Polerio, 1585</a>:  White mates in 7 moves.  (Black's first reply is a mistake.)</li>
-    <li><a href="jchess.html?f=1r6/5p1p/p2r4/4Q3/5K2/np1p1b1p/2p3pk/2n1b2q">
-        Gustavus Charles Reichhelm, 1882</a>:  White mates in 64 moves...or less!</li>
+    <li><a href="jchess.html?f=kbK5/pp6/1P6/8/8/8/R7/8">Paul Morphy, 1840s</a>:  White mates in 2 moves.</li>
+    <li><a href="jchess.html?f=5B2/6P1/1p6/8/1N6/kP6/2K5/8">Eduard Petsch-Manskopf, 1899</a>:  White mates in 3 moves.</li>
+    <li><a href="jchess.html?f=8/8/6p1/7p/7P/8/pk1K4/2R5">Giulio Polerio, 1585</a>:  White mates in 7 moves.  (Black's first reply is a mistake.)</li>
+    <li><a href="jchess.html?f=1r6/5p1p/p2r4/4Q3/5K2/np1p1b1p/2p3pk/2n1b2q">Gustavus Charles Reichhelm, 1882</a>:  White mates in 64 moves...or less!</li>
 </ul>
 
 <p>White to play and pull a draw out of his hat:</p>
 <ul>
-    <li><a href="jchess.html?f=7K/8/k1P5/7p/8/8/8/8">
-        Richard R&eacute;ti, 1921</a>:  When the rule of the square fails you, use the rule of two squares.</li>
-    <li><a href="jchess.html?f=8/8/8/8/B6n/7p/6k1/4K3">
-        Lloyd, 1860</a>:  Why is that knight just hopping around in circles?</li>
-    <li><a href="jchess.html?f=8/8/8/8/8/r7/2k2N1r/4KR2">
-        Snallposten, 1924</a>:  The craziest rook ever.</li>
-    <li><a href="jchess.html?f=8/1b6/4p3/6k1/6q1/5R2/8/5Q1K">
-        Hermann Mattison, 1931</a>:  Instead of forcing a stalemate, force your opponent to stalemate you.</li>
+    <li><a href="jchess.html?f=7K/8/k1P5/7p/8/8/8/8">Richard R&eacute;ti, 1921</a>:  When the rule of the square fails you, use the rule of two squares.</li>
+    <li><a href="jchess.html?f=8/8/8/8/B6n/7p/6k1/4K3">Lloyd, 1860</a>:  Why is that knight just hopping around in circles?</li>
+    <li><a href="jchess.html?f=8/8/8/8/8/r7/2k2N1r/4KR2">Snallposten, 1924</a>:  The craziest rook ever.</li>
+    <li><a href="jchess.html?f=8/1b6/4p3/6k1/6q1/5R2/8/5Q1K">Hermann Mattison, 1931</a>:  Instead of forcing a stalemate, force your opponent to stalemate you.</li>
 </ul>
 
 <p>White to play for the win:</p>
 <ul>
-    <li><a href="jchess.html?f=8/8/8/2k1K3/8/3R4/4n3/8">
-        Zairab Katai, about 700 A.D.</a>:  Medieval chess men that still move the same today.</li>
-    <li><a href="jchess.html?f=7K/6p1/8/7p/8/8/R7/6k1">
-        Moravec, 1930</a>:  Smothered time and time again by pushed pawns.</li>
-    <li><a href="jchess.html?f=1QK3kq/6p1/8/6B1/8/8/8/8">
-        Richter, 1953</a>:  The most mobile of all pieces, trapped!</li>
-    <li><a href="jchess.html?f=4Q2K/8/5r1k/6p1/6P1/7r/8/1R4q1">
-        Silaev, 1983</a>:  Tired of accidentally stalemating your opponent?  Now you can be forced to do it.</li>
-    <li><a href="jchess.html?f=8/6N1/K2k3B/4p3/8/p7/2PP4/8">
-        Pal Benko, 1984</a>:  STOP THAT PAWN!</li>
+    <li><a href="jchess.html?f=8/8/8/2k1K3/8/3R4/4n3/8">Zairab Katai, about 700 A.D.</a>:  Medieval chess men that still move the same today.</li>
+    <li><a href="jchess.html?f=7K/6p1/8/7p/8/8/R7/6k1">Moravec, 1930</a>:  Smothered time and time again by pushed pawns.</li>
+    <li><a href="jchess.html?f=1QK3kq/6p1/8/6B1/8/8/8/8">Richter, 1953</a>:  The most mobile of all pieces, trapped!</li>
+    <li><a href="jchess.html?f=4Q2K/8/5r1k/6p1/6P1/7r/8/1R4q1">Silaev, 1983</a>:  Tired of accidentally stalemating your opponent?  Now you can be forced to do it.</li>
+    <li><a href="jchess.html?f=8/6N1/K2k3B/4p3/8/p7/2PP4/8">Pal Benko, 1984</a>:  STOP THAT PAWN!</li>
 </ul>
 
 <p>Forced mating themes:</p>
 <ul>
-    <li><a href="jchess.html?f=2kr3r/pp6/2p2p2/7q/P4Bn1/6P1/1PQ2P2/3R1BK1">
-        Boden's mate</a>, in 2</li>
-    <li><a href="jchess.html?f=3r4/3r3p/6pk/R7/2p3P1/8/PQ2K3/6q1">
-        Epaulette mate</a>, in 2</li>
-    <li><a href="jchess.html?f=r2r2k1/pp3ppp/8/2p5/7Q/1Pq5/P3RPPP/4R1K1">
-        Boxed mate</a>, in 3</li>
-    <li><a href="jchess.html?f=rnb1kb1r/pp3ppp/2p5/4q3/4n3/3Q4/PPPB1PPP/2KR1BNR">
-        R&eacute;ti's mate</a>, in 3</li>
-    <li><a href="jchess.html?f=r4rk1/1p3p1p/6p1/1q1P4/2n5/P3p2Q/KB6/3R4">
-        Lolli's mate</a>, in 3</li>
-    <li><a href="jchess.html?f=5rk1/5ppp/8/8/q1pB2R1/3r1P2/1R5P/4K3">
-        Pillsbury's mate</a>, in 3</li>
-    <li><a href="jchess.html?f=3rb1k1/1R2b2p/7n/p5p1/3pN3/1P2r2q/5Q1P/5R1K">
-        Arabian mate</a>, in 3</li>
-    <li><a href="jchess.html?f=5rk1/5ppp/8/1p3P2/P1rQ2NB/K4n2/2q5/8">
-        Suffocation mate</a>, in 3</li>
-    <li><a href="jchess.html?f=5rk1/5ppp/8/pq1N4/1pr3P1/2PQ1P2/PP6/2K1R3">
-        Anastasia's mate</a>, in 4</li>
-    <li><a href="jchess.html?f=5rk1/p5pp/1p6/2p1N3/8/1P3Q2/q4PPP/6K1">
-        Smothered mate</a>, in 5</li>
-    <li><a href="jchess.html?f=1r4k1/4q1p1/5pP1/8/p2p4/PrP5/K7/Q2R3R">
-        Damiano's mate</a>, in 6</li>
+    <li><a href="jchess.html?f=2kr3r/pp6/2p2p2/7q/P4Bn1/6P1/1PQ2P2/3R1BK1">Boden's mate</a>, in 2</li>
+    <li><a href="jchess.html?f=3r4/3r3p/6pk/R7/2p3P1/8/PQ2K3/6q1">Epaulette mate</a>, in 2</li>
+    <li><a href="jchess.html?f=r2r2k1/pp3ppp/8/2p5/7Q/1Pq5/P3RPPP/4R1K1">Boxed mate</a>, in 3</li>
+    <li><a href="jchess.html?f=rnb1kb1r/pp3ppp/2p5/4q3/4n3/3Q4/PPPB1PPP/2KR1BNR">R&eacute;ti's mate</a>, in 3</li>
+    <li><a href="jchess.html?f=r4rk1/1p3p1p/6p1/1q1P4/2n5/P3p2Q/KB6/3R4">Lolli's mate</a>, in 3</li>
+    <li><a href="jchess.html?f=5rk1/5ppp/8/8/q1pB2R1/3r1P2/1R5P/4K3">Pillsbury's mate</a>, in 3</li>
+    <li><a href="jchess.html?f=3rb1k1/1R2b2p/7n/p5p1/3pN3/1P2r2q/5Q1P/5R1K">Arabian mate</a>, in 3</li>
+    <li><a href="jchess.html?f=5rk1/5ppp/8/1p3P2/P1rQ2NB/K4n2/2q5/8">Suffocation mate</a>, in 3</li>
+    <li><a href="jchess.html?f=5rk1/5ppp/8/pq1N4/1pr3P1/2PQ1P2/PP6/2K1R3">Anastasia's mate</a>, in 4</li>
+    <li><a href="jchess.html?f=5rk1/p5pp/1p6/2p1N3/8/1P3Q2/q4PPP/6K1">Smothered mate</a>, in 5</li>
+    <li><a href="jchess.html?f=1r4k1/4q1p1/5pP1/8/p2p4/PrP5/K7/Q2R3R">Damiano's mate</a>, in 6</li>
 </ul>
 
 <hr>
