That did not work as documented.
https://www.w3.org/TR/WD-script-960124.html

--- a/jchess.html
+++ b/jchess.html
@@ -4,7 +4,7 @@
 <head>
 <title>Little ChessPartner 1.12</title>
 <link rel="stylesheet" href="board.css">
-<link rel="script" href="Forsyth.js">
+<script language="JavaScript" src="Forsyth.js"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 
