Try making TABLE an in-line element.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 Your browser is not accepting client-side scripts.  Lacking our own personal web server, there is no fallback.
 </p></noscript>
 
-<table>
+<table style="display:inline">
 <tr><td>8</td><td id="a8" class="w">.</td><td id="b8" class="b">.</td><td id="c8" class="w">.</td><td id="d8" class="b">.</td><td id="e8" class="w">.</td><td id="f8" class="b">.</td><td id="g8" class="w">.</td><td id="h8" class="b">.</td></tr>
 <tr><td>7</td><td id="a7" class="b">.</td><td id="b7" class="w">.</td><td id="c7" class="b">.</td><td id="d7" class="w">.</td><td id="e7" class="b">.</td><td id="f7" class="w">.</td><td id="g7" class="b">.</td><td id="h7" class="w">.</td></tr>
 <tr><td>6</td><td id="a6" class="w">.</td><td id="b6" class="b">.</td><td id="c6" class="w">.</td><td id="d6" class="b">.</td><td id="e6" class="w">.</td><td id="f6" class="b">.</td><td id="g6" class="w">.</td><td id="h6" class="b">.</td></tr>
